--- a/TensorFlow/Logistic_Regression.ipynb
+++ b/TensorFlow/Logistic_Regression.ipynb
@@ -67,8 +67,8 @@
     "# Defining Variables....Note you have to mention trainable = True in W\n",
     "# Else it wont know which varible is to be updated while minimising the loss function\n",
     "\n",
-    "X = tf.get_variable( initializer= tf.zeros_initializer(), shape = (10,2), dtype = 'float32', name= \"X\")\n",
-    "Y = tf.get_variable( initializer= tf.zeros_initializer(), shape = (10), dtype='int32', name = \"Y\" )\n",
+    "X = tf.get_variable( initializer= tf.constant( Train_Data ), dtype = 'float64', name= \"X\")\n",
+    "Y = tf.get_variable( initializer= tf.constant( Train_Label ), dtype='int64', name = \"Y\" )\n",
     "W = tf.get_variable( initializer= tf.constant( [[1.9,2.7]] ), dtype='float32', trainable=True, name = \"W\" )\n",
     "\n",
     "# Sigmoid Function\n",
@@ -96,24 +96,36 @@
     "print sess.run(tf.shape(Dot_pdt))\n",
     "print \"\\n\"\n",
     "\n",
+    "    \n",
     "sess.run(X.initializer)\n",
-    "sess.run(X)\n",
+    "print sess.run(X)\n",
+    "\n",
+    "sess.run(Y.initializer)\n",
+    "print sess.run(Y)\n",
+    "\n",
+    "feed_dict={X: Train_Data, Y: Train_Label}\n",
+    "print sess.run(X)\n",
+    "print sess.run(Y)\n",
+    "\n",
+    "print \"\\n\"\n",
     "\n",
     "sess.run(W.initializer)\n",
-    "sess.run(W)\n",
+    "print sess.run(W)\n",
     "\n",
     "sess.run(Dot_pdt)\n",
     "\n",
     "sess.run(Sigmoid.initializer)\n",
-    "sess.run(Sigmoid)\n",
+    "print sess.run(Sigmoid)\n",
     "\n",
     "sess.run(Loss_fn.initializer)\n",
-    "sess.run(Loss_fn)\n",
+    "print sess.run(Loss_fn)\n",
     "\n",
+    "'''\n",
     "for _ in range(1000):\n",
     "    sess.run(optimiser, feed_dict={X: Train_Data, Y: Train_Label})\n",
     "    print sess.run(W), \"\\n\"\n",
     "    print sess.run(Loss_fn), \"\\n\"\n",
+    "'''\n",
     "\n",
     "sess.close()"
    ]
